--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
     "swagger-autogen": "^2.23.4",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.1.4"
   }
 }
